fixed layout problem on front page
there was an empty white space to scroll to right next to the page

--- a/themes/hugo-theme-qaul/static/css/qaul.css
+++ b/themes/hugo-theme-qaul/static/css/qaul.css
@@ -264,23 +264,24 @@ footer h5 {
 }
 
 #description {
+	padding: 0;
 	padding-top: 56.25%;
 	position: relative;
 	background-image: url('/img/qaul-logo-white.svg');
 	background-position: 25vw 0vw;
 	background-repeat: no-repeat;
 }
-#description div.logo, #description h1 {
-	width: 100%;
-	max-width: var(--s-pagewidth);
-	margin: 0 auto 0 auto;
+#description h2, #description h1 {
 	position: absolute;
 	font-size: 5vw;
 }
-#description div.logo {
-	top: 20%;
-}
 #description h1 {
+	font-weight: inherit;
+	top: 20%;
+	width: 100%;
+}
+#description h2 {
+	max-width: var(--s-pagewidth);
 	top: 40%;
 }
 
@@ -409,11 +410,24 @@ h1.top {
 	max-width: 100%;
 }
 
+.page figure {
+	margin-left: 0;
+	margin-right: 0;
+}
+.page figcaption {
+	font-style: italic;
+}
+
+/*
+@media only screen and (min-width: 850px) {
+	.page figure {
+		width: 50%;
+		float: left;
+	}
+}
+*/
 
 /* tags */
-.taxonomy {
-	padding: 1rem;
-}
 .taxonomy li {
 	display: inline-block;
 	padding-right: 0.3rem;
@@ -423,13 +437,22 @@ h1.top {
 
 
 /* tutorials */
+.tutorial .taxonomy {
+	padding: 1rem 1rem 0 1rem;
+}
+.tutorial article :first-child {
+	margin-top: 0;
+}
+.tutorial article {
+	padding-top: 1rem;
+	padding-bottom: 3rem;
+}
+
 .tutorials {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: space-around;
-	margin: 0;
 	padding: 0;
-	max-width: 1600px;
 }
 .tutorials .preview {
 	margin: 0;
